--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -11,3 +11,10 @@
   font-family: 'Ubuntu', sans-serif;
   margin-top: 15rem;
 }
+
+.skills-string{
+  color: #FFFFFF;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+
