--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,6 @@
+
 <nav>
-  <div class="nav-wrapper">
+  <div class="nav-wrapper" ng-sticky [offSet]="0" [addClass]="'is-sticky'">
     <a href="#!" class="brand-logo">Logo</a>
     <a href="#" class="sidenav-trigger hide-on-med-and-up"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-small-only">
@@ -10,6 +11,7 @@
     </ul>
   </div>
 </nav>
+
 
 
 
