--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Quicksand:500|Roboto|Ubuntu');
